# ProjectMiniG

./: .gitignore  README.md
Online/: CMakeLists.txt  Online.cpp  Server.cpp  Server.h
OnlineClient/: CMakeLists.txt  Game.cpp  Game.h  Online.cpp
Pong/: Game.cpp  Game.h  Pong.sln  Pong.vcxproj  Pong.vcxproj.filters  start.cpp
